Bug 1362977 - Rename CellSize to CellAlignBytes and improve the naming of related constants r=sfink